Fix panel overlaps on navbar

--- a/core/app/shell/src/themes/suite8/css/components/_multiselect.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_multiselect.scss
@@ -53,8 +53,10 @@
       padding-inline-start: 0em;
     }
   }
+
+  .p-overlay {
+    z-index: 1!important;
+  }
 }
-
-
 
 
